elements/ne-select/src/ne-select.pcss
@import './_config.pcss';

[ne-select] {
  @mixin select-config;

  margin: 0;
  border: var(--selectBorder);
  border-radius: var(--selectBorderRadius);
  background: var(--selectBackground);
  font-family: inherit;
  font-size: inherit;
  font-weight: 400;
  line-height: inherit;
  color: var(--selectColor);
  letter-spacing: 0.5px;
  outline: none;
  appearance: none;
  transition: color 0.1s ease-out, box-shadow 0.1s ease-out;
  display: block;
  width: var(--selectWidth);
  height: var(--selectHeight);
  padding: 0 calc((var(--selectPadding) * 2) + var(--selectArrowSize)) 0 var(--selectPadding);
  box-sizing: border-box;

  &:hover {
    border: var(--selectHoverBorder);
    background: var(--selectHoverBackground);
    color: var(--selectHoverColor);
  }

  &:focus {
    border: var(--selectFocusBorder);
    background: var(--selectFocusBackground);
    box-shadow: 0 0 0 var(--selectOutlineWidth) var(--selectOutlineColor);
    color: var(--selectFocusColor);
  }

  &:disabled,
  &[aria-disabled] {
    border: var(--selectDisabledBorder);
    background: var(--selectDisabledBackground);
    color: var(--selectDisabledColor);
  }

  &:disabled {
    cursor: not-allowed;
  }

  &:not([multiple]) {
    /* if select does not have `multiple` attribute it receives a caret on the right-hand side */
    background-image: var(--selectArrowIcon);
    background-repeat: no-repeat;
    background-position: right var(--selectPadding) center;
    background-size: var(--selectArrowSize);
  }

  &[multiple] {
    height: auto;
    padding: var(--selectPadding) var(--selectPadding) calc(var(--selectPadding) / 16) var(--selectPadding);

    & option {
      padding: 0.5rem 0.5rem;

      &:checked {
        color: var(--selectOptionCheckedColor);
        background: var(--selectOptionCheckedBackground) -webkit-linear-gradient(bottom, var(--selectOptionCheckedBackground) 0%, var(--selectOptionCheckedBackground) 100%);
        background-color: var(--selectOptionCheckedBackground);
      }
    }
  }

  & optgroup {
    margin: 0 0 1rem 0;
    font-family: inherit;
    font-size: inherit;
    line-height: inherit;
  }
}

